marker and databinding

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,9 @@
 <div style="text-align:center">
   <h1>
     Welcome to {{ title }}!
+    <br><br>
+    
+    {{lat}} {{lang}}
   </h1>
   <br>
 <div style="height: 300px;"
@@ -9,4 +12,3 @@
      (leafletMapReady)="onMapReady($event)" 
      [leafletOptions]="options">
 </div>
-
