Distance calculator service has been added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
     Welcome to {{ title }}!
     <br><br>
     
-    {{lat}} {{lang}}
+    
   </h1>
   <br>
 <div style="height: 300px;"
@@ -12,3 +12,7 @@
      (leafletMapReady)="onMapReady($event)" 
      [leafletOptions]="options">
 </div>
+<p>
+	{{lat}} {{lang}}
+	<br>Distance: {{distance}}
+</p>
