--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
   <h1>
@@ -16,3 +17,23 @@
 	{{lat}} {{lang}}
 	<br>Distance: {{distance}}
 </p>
+<!----------------------------HEADER------------------------------------------------>
+<div id="container">
+  <div ng2-carouselamos class="slides-wrapper" [items]="items" [width]="900" [$prev]="prev" [$next]="next" [$item]="item">
+  </div>
+
+
+  <ng-template #prev>
+    <img src="assets/images/left-arrow.png" id="left" />
+  </ng-template>
+  <ng-template #next>
+    <img src="assets/images/right-arrow.png" id="right" />
+  </ng-template>
+  <ng-template #item let-item let-i="index">
+
+    <div class="items">
+      <img src="{{ item.name }}">
+    </div>
+
+  </ng-template>
+  <!-----------------HEADER-END----------------------->
