--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,11 @@
+
+  <div class="container-fluid">
+
+  <app-addis-images></app-addis-images>
+  </div>
+
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
+  <div class="container-fluid">
   <h1>
     Welcome to {{ title }}!
     <br><br>
