--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,4 @@
 
-  <div class="container-fluid">
-
-  <app-addis-images></app-addis-images>
-  </div>
-
 <!--The content below is only a placeholder and can be replaced.-->
   <div class="container-fluid">
   <h1>
@@ -19,3 +14,16 @@
     {{lat}} {{lang}}
     <br>Distance: {{distance}}
   </p>
+
+  <div class="container-fluid">
+
+    <hr>
+
+    <p>
+      Welcome to Ethio-location.
+    </p>
+
+    <hr>
+    <app-addis-images></app-addis-images>
+
+  </div>
