--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,26 +4,27 @@
   <h1>
     Welcome to {{ title }}!
     <br><br>
-
+    <br>latitude:  {{lat | number: '1.2-2'}}  longtiude: {{lang |number: '1.2-2'}}<br>
 
   </h1>
   <br>
   <div style="height: 300px;" leaflet (leafletMapReady)="onMapReady($event)" [leafletOptions]="options">
   </div>
   <p>
-    {{lat}} {{lang}}
-    <br>Distance: {{distance}}
+  
+  
+       <br>your guess was <b>{{distanceInKillometer | number: '1.2-2'}}km</b>
+    ( {{distanceInMiles |number:'1.2-2'}} miles) from the correct location<br>
+             <br>your point is {{ Point }}<br>
   </p>
   <div class="container-fluid">
 
     <hr>
 
-    <p>
-      Welcome to Ethio-location.
-    </p>
-
+  
     <hr>
     <app-addis-images></app-addis-images>
+<br>
 
   </div>
   
