--- a/src/app/addis-images/addis-images.component.html
+++ b/src/app/addis-images/addis-images.component.html
@@ -1,5 +1,5 @@
- <!--<div class="col-md-12">
-  <div class="col-md-6"> -->
+ <div class="col-md-12">
+  <div class="col-md-6"> 
 <ngb-carousel *ngIf="images">
   <ng-template ngbSlide>
     <img [src]="images[0]" alt="Random first slide">
@@ -19,4 +19,45 @@
      
     </div>
   </ng-template>
+
+  <ng-template ngbSlide>
+    <img [src]="images[3]" alt="Random third slide">
+    <div class="carousel-caption">
+ 
+
+    </div>
+  </ng-template>
+  
+  <ng-template ngbSlide>
+    <img [src]="images[4]" alt="Random third slide">
+    <div class="carousel-caption">
+ 
+
+    </div>
+  </ng-template>
+  
+  <ng-template ngbSlide>
+    <img [src]="images[5]" alt="Random third slide">
+    <div class="carousel-caption">
+ 
+
+    </div>
+  </ng-template>
+  
+  <ng-template ngbSlide>
+    <img [src]="images[6]" alt="Random third slide">
+    <div class="carousel-caption">
+ 
+
+    </div>
+  </ng-template>
+  
+  <ng-template ngbSlide>
+    <img [src]="images[7]" alt="Random third slide">
+    <div class="carousel-caption">
+ 
+ 
+    </div>
+  </ng-template>
+  
 </ngb-carousel>
