Style modified, image and button templated moved from ts file to html

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,8 @@
+<div class="container-fluid">
+  <app-addis-map>  	
+  </app-addis-map>
 
+  <app-addis-images>  	
+  </app-addis-images> 
 
-  <div class="container-fluid">
-
-    <hr>
-
-  <app-addis-map></app-addis-map>
-    <hr>
-
-   <app-addis-images></app-addis-images> 
-
-
-  </div>
-  
+</div>  
