--- a/src/app/addis-images/addis-images.component.html
+++ b/src/app/addis-images/addis-images.component.html
@@ -1,63 +1,6 @@
- <div class="col-md-12">
-  <div class="col-md-6"> 
-<ngb-carousel *ngIf="images">
-  <ng-template ngbSlide>
-    <img [src]="images[0]" alt="Random first slide">
-    <div class="carousel-caption">
-   
-    </div>
-  </ng-template>
-  <ng-template ngbSlide>
-    <img [src]="images[1]" alt="Random second slide">
-    <div class="carousel-caption">
-    
-    </div>
-  </ng-template>
-  <ng-template ngbSlide>
-    <img [src]="images[2]" alt="Random third slide">
-    <div class="carousel-caption">
-     
-    </div>
-  </ng-template>
 
-  <ng-template ngbSlide>
-    <img [src]="images[3]" alt="Random third slide">
-    <div class="carousel-caption">
- 
+<img class="img-fluid" src="{{photos[(counter$ | async)]}}">
+<button type="button" class="btn btn-primary" (click)="button$.next(1)">Next</button>
+<button type="button" class="btn btn-primary" (click)="button$.next(1)">submit</button>
 
-    </div>
-  </ng-template>
   
-  <ng-template ngbSlide>
-    <img [src]="images[4]" alt="Random third slide">
-    <div class="carousel-caption">
- 
-
-    </div>
-  </ng-template>
-  
-  <ng-template ngbSlide>
-    <img [src]="images[5]" alt="Random third slide">
-    <div class="carousel-caption">
- 
-
-    </div>
-  </ng-template>
-  
-  <ng-template ngbSlide>
-    <img [src]="images[6]" alt="Random third slide">
-    <div class="carousel-caption">
- 
-
-    </div>
-  </ng-template>
-  
-  <ng-template ngbSlide>
-    <img [src]="images[7]" alt="Random third slide">
-    <div class="carousel-caption">
- 
- 
-    </div>
-  </ng-template>
-  
-</ngb-carousel>
