--- a/src/app/addis-map/addis-map.component.html
+++ b/src/app/addis-map/addis-map.component.html
@@ -1,17 +1,14 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div class="container-fluid">
-  <h1>
-    Welcome to {{ title }}!
-    <br><br>
-    <br>latitude: {{lat | number: '1.2-2'}} longtiude: {{lang |number: '1.2-2'}}<br>
-
-  </h1>
-  <br>
+  <div class="jumbotron">
+  <h1 class="display-4">Welcome to {{ title }}!</h1>
+  <p class="lead">This is a simple game to help users to understand our city Addis.</p>
+  <hr class="my-4">
+  
+</div> 
+ 
   <div style="height: 300px;" leaflet (leafletMapReady)="onMapReady($event)" [leafletOptions]="options">
   </div>
   <p>
-
-
     <br>your guess was <b>{{distanceInKillometer | number: '1.2-2'}}km</b> ( {{distanceInMiles |number:'1.2-2'}} miles) from
     the correct location<br>
     <br>your point is {{ Point }}<br>
