--- a/src/app/addis-map/addis-map.component.html
+++ b/src/app/addis-map/addis-map.component.html
@@ -9,7 +9,11 @@
   <div style="height: 300px;" leaflet (leafletMapReady)="onMapReady($event)" [leafletOptions]="options">
   </div>
   <p>
-    <br>your guess was <b>{{distanceInKillometer | number: '1.2-2'}}km</b> ( {{distanceInMiles |number:'1.2-2'}} miles) from
+    <br>your guess was <b>{{distance| number: '1.2-2'}}km</b> ( {{distanceInMiles |number:'1.2-2'}} miles) from
     the correct location<br>
-    <br>your point is {{ Point }}<br>
+    <br>your point is {{ total_point }}<br>
   </p>
+
+<img class="img-fluid" src="{{photos [(counter$ | async)]}}">
+<button *ngIf="show_next==true" type="button" class="btn btn-primary" (click)="button$.next(1)">Next</button>
+<!--button type="button" class="btn btn-primary" (click)="button$.next(1)">submit</button-->
