--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,18 @@
-<div class="container-fluid">
-  <app-addis-map>  	
-  </app-addis-map>
-</div>  
+<div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
+	<header class="masthead mb-auto">
+        <div class="inner">
+          <h3 class="masthead-brand">Cover</h3>
+          <nav class="nav nav-masthead justify-content-center">
+            <a class="nav-link active" href="#">Home</a>
+            <a class="nav-link" href="#">Features</a>
+            <a class="nav-link" href="#">Contact</a>
+          </nav>
+        </div>
+      </header>
+<router-outlet></router-outlet> 
+<footer class="mastfoot mt-auto">
+        <div class="inner">
+          <p>Cover template for <a href="https://getbootstrap.com/">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
+        </div>
+      </footer>
+</div>
