--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,10 +2,10 @@
       
 
       <main role="main" class="inner cover">
-        <h1 class="cover-heading">Cover your page.</h1>
-        <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
+        <h1 class="cover-heading">Let's Explore Ethiopia.</h1>
+        <p class="lead">This is a simple game to help users to understand our capital city Addis..</p>
         <p class="lead">
-          <a href="#" class="btn btn-lg btn-secondary">Learn more</a>
+          <a href="addis-map" class="btn btn-lg btn-secondary">Play</a>
         </p>
       </main>
 
